<resources>
    <string name="app_name">TmCallDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_incoming_call_title">来电提醒</string>
    <string name="app_incoming_video_call_message">%1$s 邀请你视频通话</string>
    <string name="app_incoming_audio_call_message">%1$s 邀请你语音通话</string>
    <string name="app_incoming_call_accept">接通</string>
    <string name="app_incoming_call_cancel">拒绝</string>

    <string name="trtc_test_title">云信信令 + TRTC 1V1 测试</string>
    <string name="trtc_user_id_hint">当前用户 ID，例如 11</string>
    <string name="trtc_room_id_hint">房间号，例如 room_1001</string>
    <string name="trtc_video_call">视频呼叫</string>
    <string name="trtc_audio_call">语音呼叫</string>
    <string name="trtc_status_idle">当前未进入房间</string>
    <string name="trtc_status_entering">正在进入 TRTC 房间…</string>
    <string name="trtc_status_exiting">正在退出房间…</string>
    <string name="trtc_status_in_room">进房成功，耗时 %1$d ms，等待对方加入</string>
    <string name="trtc_test_hint">两台手机使用不同用户 ID，输入相同房间号，并选择相同通话类型</string>
    <string name="trtc_waiting_remote_video">视频通话已启动，等待对方进入同一房间</string>
    <string name="trtc_audio_calling">语音通话已启动，等待对方进入同一房间</string>
    <string name="trtc_remote_joined">用户 %1$s 已加入房间</string>
    <string name="trtc_remote_left">用户 %1$s 已离开房间</string>
    <string name="trtc_exited_room">已退出 TRTC 房间</string>
    <string name="trtc_error">错误 %1$d：%2$s</string>
    <string name="trtc_mute_microphone">静音</string>
    <string name="trtc_unmute_microphone">取消静音</string>
    <string name="trtc_close_camera">关闭摄像头</string>
    <string name="trtc_open_camera">打开摄像头</string>
    <string name="trtc_switch_camera">切换摄像头</string>
    <string name="trtc_use_receiver">使用听筒</string>
    <string name="trtc_use_speaker">使用扬声器</string>
    <string name="trtc_hangup">挂断</string>
    <string name="trtc_permission_denied">请允许通话所需的麦克风或摄像头权限后再试</string>
    <string name="trtc_usersig_failed">生成测试 UserSig 失败</string>
    <string name="trtc_user_id_required">请输入当前用户 ID</string>
    <string name="trtc_room_id_required">请输入房间号</string>
    <string name="trtc_room_id_too_long">房间号不能超过 64 字节</string>
    <string name="trtc_already_in_room">当前已经在通话中</string>

    <string name="nim_user_id_hint">云信账号 ID，例如 11</string>
    <string name="nim_token_hint">云信账号 Token</string>
    <string name="nim_peer_id_hint">对方云信账号 ID，例如 12</string>
    <string name="nim_login">登录云信</string>
    <string name="nim_logout">退出登录</string>
    <string name="nim_not_configured">请先在 NimDemoConfig 中填写云信 AppKey</string>
    <string name="nim_not_logged_in">云信当前未登录</string>
    <string name="nim_logging_in">正在登录云信…</string>
    <string name="nim_login_success">云信登录成功：%1$s</string>
    <string name="nim_logged_out">云信账号已退出</string>
    <string name="nim_ready">云信已登录，可以发起或接收呼叫</string>
    <string name="nim_calling_peer">正在呼叫 %1$s…</string>
    <string name="nim_outgoing_ringing">呼叫已发送，等待对方接听…</string>
    <string name="nim_incoming_ringing">收到新的来电邀请</string>
    <string name="nim_accepting_call">正在接听并加入信令房间…</string>
    <string name="nim_incoming_video_call">%1$s 邀请你进行视频通话</string>
    <string name="nim_incoming_audio_call">%1$s 邀请你进行语音通话</string>
    <string name="nim_peer_busy">对方正在通话中</string>
    <string name="nim_call_rejected">对方已拒绝通话</string>
    <string name="nim_call_rejected_by_me">已拒绝来电</string>
    <string name="nim_call_cancelled">呼叫已取消</string>
    <string name="nim_call_timeout">对方未接听，呼叫超时</string>
    <string name="nim_call_ended">通话已结束</string>
    <string name="nim_media_idle">登录后输入对方账号即可发起通话</string>
    <string name="nim_error">云信错误 %1$d：%2$s</string>
    <string name="nim_user_id_required">请输入云信账号 ID</string>
    <string name="nim_token_required">请输入云信账号 Token</string>
    <string name="nim_peer_id_required">请输入对方云信账号 ID</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
